范型学习代码提交

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.StudyRecyclerView"
         tools:targetApi="31">
         <activity
-            android:name=".activity.SplashActivity"
+            android:name=".activity.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.StudyRecyclerView">
@@ -23,15 +23,16 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
+       <!-- <activity
             android:name=".activity.MainActivity"
             android:exported="true"
             android:theme="@style/Theme.StudyRecyclerView">
-        </activity>
+        </activity>-->
         <activity
             android:name=".activity.SimpleRecyclerActivity"
             android:theme="@style/Theme.StudyRecyclerView">
         </activity>
+        <activity android:name=".activity.GenericsStudyActivity" />
     </application>
 
 </manifest>
